[project]
name = "new_brunswick"
version = "1.2.4"
description = "New Brunswick Burn Ban Status for Home Assistant"
authors = [{ name = "travipross" }]
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = [
    "ruff>=0.3.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "aiohttp>=3.9.0",
]

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = [
    "B",   # flake8-bugbear
    "C",   # flake8-comprehensions
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "PL",  # pylint
    "UP",  # pyupgrade
    "W",   # pycodestyle warnings
]
ignore = [
    "PLR0913", # Too many arguments to function call
    "PLR2004", # Magic value used in comparison
]

[tool.ruff.lint.isort]
force-sort-within-sections = true
known-first-party = ["custom_components.new_burnswick"]
combine-as-imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"
norecursedirs = [".git", "custom_components"]
